--- a/css/style.css
+++ b/css/style.css
@@ -49,4 +49,7 @@ iframe {
     margin-bottom: 25px;
 	padding-top: 0px;
 	padding-bottom: 0px }
-.
+.cv
+	{max-width: 15% !important;
+		text-align: right !important
+		}
